Fixed tagline wrapping on small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,10 @@
 	width:100%;
 }
 
+.tagline {
+	white-space: nowrap;
+}
+
 
 /** =======================================================  */
 /** Github Ribbon */
